Completely new base

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lazarus-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "A grey-red syntax theme inspired by the Brogrammer theme",
+  "description": "A dark and modern theme based on the Sweet KDE theme",
   "keywords": [
     "syntax",
     "theme"
